# de-morph-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
LICENSES/: README.md
crates/de-morph-build/: Cargo.toml
crates/de-morph-build/src/: build_lexicon.rs  config.rs  extract.rs  lib.rs  main.rs  package.rs  pipeline.rs
crates/de-morph-build/src/wiktionary/: abbreviation.rs  adjective.rs  adverb.rs  compound.rs  noun.rs  pronoun.rs  propn.rs  verb.rs
crates/de-morph-cli/: Cargo.toml
crates/de-morph-cli/src/: main.rs
crates/de-morph-cli/src/cli/: bench.rs  eval.rs  split.rs
crates/de-morph-core/: Cargo.toml
crates/de-morph-core/src/: analyzer.rs
crates/de-morph-core/src/lexicon/: build.rs  format.rs  load.rs  mod.rs
crates/de-morph-core/src/paradigm/: closed_class.rs  mod.rs
data/: README.md
data/wiktionary/: PROVENANCE.md
de-morph-build/: Cargo.toml
de-morph-build/src/: config.rs  extract.rs  package.rs  pipeline.rs
de-morph-build/src/wiktionary/: abbreviation.rs  adjective.rs  adverb.rs  mod.rs  noun.rs  pronoun.rs  propn.rs  template.rs  verb.rs
examples/: _check.rs  _check_bun.rs  all_closed_class_demo.rs  analyze_demo.rs  bench_analyze.rs  build_fst.rs  closed_class_demo.rs  compound_audit.rs  compound_demo.rs  conllu_eval.rs  conllu_unmatched_dump.rs  dative_demo.rs  debug_split.rs  decomposable_lemmas.rs  dump_analyses.rs  extras_demo.rs  splitter_vs_wiktionary.rs  v2_verify.rs  wer_demo.rs
scripts/: README.md
scripts/fetch/: dewiktionary.sh
src/: analysis.rs  analyzer.rs  lib.rs
src/lexicon/: build.rs  format.rs  load.rs  mod.rs
src/paradigm/: adjective.rs  closed_class.rs  mod.rs  noun.rs  verb.rs
src/wiktionary/: abbreviation.rs  adjective.rs  adverb.rs  dump.rs  mod.rs  noun.rs  pronoun.rs  propn.rs  template.rs  verb.rs
