[package]
name = "de-morph-rs"
version = "0.0.1"
edition = "2021"
rust-version = "1.74"
description = "German morphological analyzer based on finite-state transducers"
license = "MIT"
keywords = ["german", "morphology", "nlp", "fst", "linguistics"]
categories = ["text-processing"]
readme = "README.md"

# data/ may carry CC BY-SA derivatives of German Wiktionary, and scripts/ is
# dev-only tooling. Both MUST stay out of the published crate so cargo
# consumers get only MIT-licensed bytes. Verify before any release with:
#   cargo package --list | grep -E '^(data|scripts)/'
exclude = ["data/*", "scripts/*"]

[lib]
name = "de_morph"

[features]
default = []
# Build-time tooling: streaming bz2/XML reader, MediaWiki template parser,
# and the extract-* binaries. Not needed at runtime — the published crate
# default keeps the dependency tree minimal.
extractor = [
    "dep:anyhow",
    "dep:bzip2",
    "dep:quick-xml",
    "dep:serde",
    "dep:serde_json",
]

[dependencies]
fst = "0.4"
anyhow = { version = "1", optional = true }
bzip2 = { version = "0.4", optional = true }
quick-xml = { version = "0.36", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# The single `de-morph` binary. Runtime subcommands (analyze / split /
# bench / dump + eval diagnostics) embed the lexicon via include_bytes!
# and need no extra deps. The lexicon-build subcommands (extract /
# build-lexicon) are compiled in only under `--features extractor`, which
# pulls the bz2/XML/serde tooling.
[[bin]]
name = "de-morph"
path = "src/bin/de-morph.rs"
