# Virtual workspace. The crates split by dependency weight and role:
#
#   crates/de-morph-core   the published library (`de_morph`); deps: fst only.
#   crates/de-morph-cli    the runtime CLI binary (`de-morph`); loads the lexicon
#                          from disk and embeds nothing (no CC BY-SA bytes).
#   crates/de-morph-build  build-time tooling (Wiktionary extraction, lexicon
#                          build, packaging); the only crate pulling bz2/XML/
#                          serde, so none of it reaches library consumers.
[workspace]
resolver = "2"
members = ["crates/*"]
